--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ What’s the silliest idea you have ever had?
 
 <tr>
 <td> Address: </td>
-<td> <input type="text" size="25""my-adress"</td>
+<td> <input type="text" size="25" name="my-adress"></td>
 </tr>
 <tr>
 <td> Favourite drink: </td>
